docker_deploy/kubernetes-stellan/examples/ingress-gcsfuse-nginx-gke/yamls/v212b-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.17.0 (a74acad)
  creationTimestamp: null
  labels:
    io.kompose.service: v212b
  name: v212b
spec:
  replicas: 1
  selector:
    matchLabels:
      name: v212b
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: v212b
        name: v212b
    spec:
      containers:
        - name: web
          args:
            - gunicorn
            - backend.wsgi:application
            - --bind
            - 0.0.0.0:8000
            - --env
            - DJANGO_SETTINGS_MODULE=backend.settings_production_kubernetes
          image: s53ostlund/openta:v2.1.3
          imagePullPolicy: IfNotPresent
          volumeMounts:
          - mountPath: /srv/openta/django/backend/media
            name: site-data
            subPath: media
          - mountPath: /srv/openta/exercises
            name: site-data
            subPath: exercises
          workingDir: /srv/openta/django/backend/
          resources:
            requests:
              cpu: "0.05"
              memory: "700Mi"

        - image: postgres:9.5.3
          name: db
          volumeMounts:
          - mountPath: /var/lib/postgresql/data
            name: site-data
            subPath: database
          resources:
            requests:
              cpu: "0.05"
              memory: "256Mi"

        - image: s53ostlund/nginx2:latest
          imagePullPolicy: IfNotPresent
          name: nginx
          command: ["/bin/sh"]
          args: ["-c", "envsubst '$OPENTA_SUBPATH $USE_SSL' < /etc/nginx/conf.d/default.template > /etc/nginx/conf.d/default.conf && exec nginx -g 'daemon off;'"]
          ports:
          - containerPort: 8080
          volumeMounts:
          - mountPath: /srv/openta/django/backend/media
            name: site-data
            subPath: media
          - mountPath: /srv/openta/exercises
            name: site-data
            subPath: exercises
          resources:
            requests:
              cpu: "0.05"
              memory: "128Mi"

        - image: redis:3.2.0
          name: redis
          volumeMounts:
          - mountPath: /data
            name: site-data
            subPath: redis
          resources:
            requests:
              cpu: "0.05"
              memory: "128Mi"

        - name: rqworker
          args:
            - python
            - manage.py
            - rqworker
          image: s53ostlund/openta:v2.1.3
          imagePullPolicy: IfNotPresent
          volumeMounts:
          - mountPath: /srv/openta/django/backend/media
            name: site-data
            subPath: media
          workingDir: /srv/openta/django/backend/
          resources:
            requests:
              cpu: "0.05"
              memory: "128Mi"
      imagePullSecrets:
        - name: dockerkey
      restartPolicy: Always
      volumes:
      - name: site-data
        persistentVolumeClaim:
          claimName: v212b-data
status: {}
