docker_deploy/kubernetes-stellan/examples/ingress-gcsfuse-nginx-gke/yamls/v300-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.17.0 (a74acad)
  creationTimestamp: null
  labels:
    io.kompose.service: v300
  name: v300
spec:
  replicas: 1
  selector:
    matchLabels:
      name: v300
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: v300
        name: v300
    spec:
      containers:
        - name: web
          args:
            - gunicorn
            - backend.wsgi:application
            - --bind
            - 0.0.0.0:8000
            - --env
            - DJANGO_SETTINGS_MODULE=backend.settings_production_kubernetes
          securityContext:
            privileged: true
            capabilities:
              add:
                - SYS_ADMIN
          #lifecycle:
          #  postStart:
          #    exec:
          #      command: ["gcsfuse",  "openta-development-bucket", "/srv/multicourse"]
          #  preStop:
          #    exec:
          #      command: ["fusermount", "-u", "/srv/multicourse"]
          image: s53ostlund/openta:v3.0.0
          imagePullPolicy: Always
          volumeMounts:
          - mountPath: /srv/multicourse
            name: site300-data
          workingDir: /srv/openta/django/backend/
          resources:
            requests:
              cpu: "0.05"
              memory: "700Mi"

        - image: postgres:9.5.3
          name: db
          volumeMounts:
          - mountPath: /var/lib/postgresql/data
            name: site300-data
            subPath: database
          resources:
            requests:
              cpu: "0.05"
              memory: "256Mi"

        - image: s53ostlund/nginx:v3.0.0
          imagePullPolicy: Always
          name: nginx
          securityContext:
            privileged: true
            capabilities:
              add:
                - SYS_ADMIN
          #lifecycle:
          #  postStart:
          #    exec:
          #      command: ["gcsfuse",  "openta-development-bucket", "/srv/multicourse"]
          #  preStop:
          #    exec:
          #      command: ["fusermount", "-u", "/srv/multicourse"]

          command: ["/bin/sh"]
          args: ["-c", "envsubst '$OPENTA_SUBPATH $USE_SSL' < /etc/nginx/conf.d/default.template > /etc/nginx/conf.d/default.conf && exec nginx -g 'daemon off;'"]
          ports:
          - containerPort: 8080
          volumeMounts:
          - mountPath: /srv/multicourse
            name: site300-data
          resources:
            requests:
              cpu: "0.05"
              memory: "128Mi"

        - image: redis:3.2.0
          name: redis
          volumeMounts:
          - mountPath: /data
            name: site300-data
            subPath: redis
          resources:
            requests:
              cpu: "0.05"
              memory: "128Mi"

        - name: rqworker
          args:
            - python
            - manage.py
            - rqworker
          image: s53ostlund/openta:v3.0.0
          imagePullPolicy: Always
          securityContext:
            privileged: true
            capabilities:
              add:
                - SYS_ADMIN
          #lifecycle:
          #  postStart:
          #    exec:
          #      command: ["gcsfuse",  "openta-development-bucket", "/srv/multicourse"]
          #  preStop:
          #    exec:
          #      command: ["fusermount", "-u", "/srv/multicourse"]

          volumeMounts:
          - mountPath: /srv/multicourse
            name: site300-data
          workingDir: /srv/openta/django/backend/
          resources:
            requests:
              cpu: "0.05"
              memory: "128Mi"
      imagePullSecrets:
        - name: dockerkey
      restartPolicy: Always
      volumes:
      - name: site300-data
        persistentVolumeClaim:
          claimName: v300-data
status: {}
